[package]
name = "rob-run"
version = "0.1.0"
authors = ["Ryan Tolboom <rxt1077@njit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version = "0.6.0", features = [ "with-chrono-0_4" ] }
dotenv = "0.15.0"
chrono = "0.4.19"
tempfile = "3.1.0"
anyhow = "1.0.34"
tokio = { version = "0.3", features = ["process", "macros", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.8.2"
